frontend/manifests/prd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lg-admin-admin-service-fe-prd
  labels:
    app.kubernetes.io/instance: lg-admin-admin-service-fe-prd
    app.kubernetes.io/name: lg-admin-admin-service-fe-prd
  annotations:
  namespace: admin-service
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: lg-admin-admin-service-fe-prd
    app.kubernetes.io/name: lg-admin-admin-service-fe-prd
---
apiVersion: v1
kind: Service
metadata:
  name: lg-admin-admin-service-fe-prd-preview
  labels:
    app.kubernetes.io/instance: lg-admin-admin-service-fe-prd
    app.kubernetes.io/name: lg-admin-admin-service-fe-prd
  annotations:
  namespace: admin-service
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: lg-admin-admin-service-fe-prd
    app.kubernetes.io/name: lg-admin-admin-service-fe-prd
